tests/baselines/reference/topLevelLambda4.errors.txt
==== tests/cases/compiler/topLevelLambda4.ts (1 errors) ====
    export var x = () => this.window;
                         ~~~~
!!! topLevelLambda4.ts(1,22): error TS2108: 'this' cannot be referenced within module bodies.